Deployment from Statiq

--- a/ble/getting-started.html
+++ b/ble/getting-started.html
@@ -148,6 +148,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -234,50 +278,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -355,18 +355,18 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Bluetooth LE is divided into 2 separate categories - the central manager (client) and the peripheral manager (server).</p>
 <div class="tab-wrap">
-<input type="radio" id="dc95b72f51bc4effa18423df9755c56f-30fa07d335ad4089be5d1f54e43ddc18" name="dc95b72f51bc4effa18423df9755c56f" class="tab" checked=""><label for="dc95b72f51bc4effa18423df9755c56f-30fa07d335ad4089be5d1f54e43ddc18">General</label>
-<input type="radio" id="dc95b72f51bc4effa18423df9755c56f-5e66c27bebd548aabda9c10d38d8bf7f" name="dc95b72f51bc4effa18423df9755c56f" class="tab"><label for="dc95b72f51bc4effa18423df9755c56f-5e66c27bebd548aabda9c10d38d8bf7f">Startup</label>
-<input type="radio" id="dc95b72f51bc4effa18423df9755c56f-4476cacfa0ea43f7b50ee8f135017b28" name="dc95b72f51bc4effa18423df9755c56f" class="tab"><label for="dc95b72f51bc4effa18423df9755c56f-4476cacfa0ea43f7b50ee8f135017b28">Android</label>
-<input type="radio" id="dc95b72f51bc4effa18423df9755c56f-324a842290484ea1bb38c15034b5da03" name="dc95b72f51bc4effa18423df9755c56f" class="tab"><label for="dc95b72f51bc4effa18423df9755c56f-324a842290484ea1bb38c15034b5da03">iOS</label>
-<input type="radio" id="dc95b72f51bc4effa18423df9755c56f-5220f81a94534773af459f7867af4b4c" name="dc95b72f51bc4effa18423df9755c56f" class="tab"><label for="dc95b72f51bc4effa18423df9755c56f-5220f81a94534773af459f7867af4b4c">Windows</label>
+<input type="radio" id="dee3b68e4d2346c7866ffa33a40e4485-e5837302ba2d4ab29d369466d7418f1e" name="dee3b68e4d2346c7866ffa33a40e4485" class="tab" checked=""><label for="dee3b68e4d2346c7866ffa33a40e4485-e5837302ba2d4ab29d369466d7418f1e">General</label>
+<input type="radio" id="dee3b68e4d2346c7866ffa33a40e4485-d2f069c4af564059b26ce9a4fc72bb3d" name="dee3b68e4d2346c7866ffa33a40e4485" class="tab"><label for="dee3b68e4d2346c7866ffa33a40e4485-d2f069c4af564059b26ce9a4fc72bb3d">Startup</label>
+<input type="radio" id="dee3b68e4d2346c7866ffa33a40e4485-db254b1aacdd4819b62b2d8e4cfb2bfb" name="dee3b68e4d2346c7866ffa33a40e4485" class="tab"><label for="dee3b68e4d2346c7866ffa33a40e4485-db254b1aacdd4819b62b2d8e4cfb2bfb">Android</label>
+<input type="radio" id="dee3b68e4d2346c7866ffa33a40e4485-674ec5687ac14aa98db6079f62bfbd43" name="dee3b68e4d2346c7866ffa33a40e4485" class="tab"><label for="dee3b68e4d2346c7866ffa33a40e4485-674ec5687ac14aa98db6079f62bfbd43">iOS</label>
+<input type="radio" id="dee3b68e4d2346c7866ffa33a40e4485-4b2131a26ad84dc7a75852516309a4d4" name="dee3b68e4d2346c7866ffa33a40e4485" class="tab"><label for="dee3b68e4d2346c7866ffa33a40e4485-4b2131a26ad84dc7a75852516309a4d4">Windows</label>
 <div class="tab__content">
 
 <p>|Area|Info|
