--- a/framework/gettingstarted.html
+++ b/framework/gettingstarted.html
@@ -150,6 +150,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -236,50 +280,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -357,17 +357,17 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="1335e78230c1479cbc90fbc78013e852-f70cf1b891914dd6905ee110b3bfce71" name="1335e78230c1479cbc90fbc78013e852" class="tab" checked><label for="1335e78230c1479cbc90fbc78013e852-f70cf1b891914dd6905ee110b3bfce71" >General</label>
-<input type="radio" id="1335e78230c1479cbc90fbc78013e852-d1ab647bc0c54ddeab591c4f85a1fe74" name="1335e78230c1479cbc90fbc78013e852" class="tab" ><label for="1335e78230c1479cbc90fbc78013e852-d1ab647bc0c54ddeab591c4f85a1fe74" >Startup</label>
-<input type="radio" id="1335e78230c1479cbc90fbc78013e852-4eaf081d907545ff8700e8884a6614ab" name="1335e78230c1479cbc90fbc78013e852" class="tab" ><label for="1335e78230c1479cbc90fbc78013e852-4eaf081d907545ff8700e8884a6614ab" >Android</label>
-<input type="radio" id="1335e78230c1479cbc90fbc78013e852-0005d010e4ac4fc1a383bc4a521b4f88" name="1335e78230c1479cbc90fbc78013e852" class="tab" ><label for="1335e78230c1479cbc90fbc78013e852-0005d010e4ac4fc1a383bc4a521b4f88" >iOS</label>
-<input type="radio" id="1335e78230c1479cbc90fbc78013e852-de7b2e3431524321a1c5fa3d689a687d" name="1335e78230c1479cbc90fbc78013e852" class="tab" ><label for="1335e78230c1479cbc90fbc78013e852-de7b2e3431524321a1c5fa3d689a687d" >Windows</label>
+<input type="radio" id="2c8472fa5a4b48319a53b105c89f81df-1de37b5dfafb4bfb9948aeb2b473b48b" name="2c8472fa5a4b48319a53b105c89f81df" class="tab" checked><label for="2c8472fa5a4b48319a53b105c89f81df-1de37b5dfafb4bfb9948aeb2b473b48b" >General</label>
+<input type="radio" id="2c8472fa5a4b48319a53b105c89f81df-3dce861fc09a4912ab51ec74513ed6e0" name="2c8472fa5a4b48319a53b105c89f81df" class="tab" ><label for="2c8472fa5a4b48319a53b105c89f81df-3dce861fc09a4912ab51ec74513ed6e0" >Startup</label>
+<input type="radio" id="2c8472fa5a4b48319a53b105c89f81df-83ea24529f90465b8a46e2ca990328d9" name="2c8472fa5a4b48319a53b105c89f81df" class="tab" ><label for="2c8472fa5a4b48319a53b105c89f81df-83ea24529f90465b8a46e2ca990328d9" >Android</label>
+<input type="radio" id="2c8472fa5a4b48319a53b105c89f81df-36523ddf565e42de891bf5af522c6dec" name="2c8472fa5a4b48319a53b105c89f81df" class="tab" ><label for="2c8472fa5a4b48319a53b105c89f81df-36523ddf565e42de891bf5af522c6dec" >iOS</label>
+<input type="radio" id="2c8472fa5a4b48319a53b105c89f81df-43177c415f8a43f9a2315a85cd872e82" name="2c8472fa5a4b48319a53b105c89f81df" class="tab" ><label for="2c8472fa5a4b48319a53b105c89f81df-43177c415f8a43f9a2315a85cd872e82" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
