--- a/httptransfers/getting-started.html
+++ b/httptransfers/getting-started.html
@@ -148,6 +148,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -234,50 +278,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -355,17 +355,17 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="e63396f7976b484093c7000a0490448e-97d1d799b87e47a5a836f1001491f720" name="e63396f7976b484093c7000a0490448e" class="tab" checked=""><label for="e63396f7976b484093c7000a0490448e-97d1d799b87e47a5a836f1001491f720">General</label>
-<input type="radio" id="e63396f7976b484093c7000a0490448e-b3dfdeb36f7643238d2e7f02176b63c5" name="e63396f7976b484093c7000a0490448e" class="tab"><label for="e63396f7976b484093c7000a0490448e-b3dfdeb36f7643238d2e7f02176b63c5">Startup</label>
-<input type="radio" id="e63396f7976b484093c7000a0490448e-4c8a0ca478f44b24a8bedd12e1251b36" name="e63396f7976b484093c7000a0490448e" class="tab"><label for="e63396f7976b484093c7000a0490448e-4c8a0ca478f44b24a8bedd12e1251b36">Android</label>
-<input type="radio" id="e63396f7976b484093c7000a0490448e-16231b96be1b4f3885f8aa250003bfc4" name="e63396f7976b484093c7000a0490448e" class="tab"><label for="e63396f7976b484093c7000a0490448e-16231b96be1b4f3885f8aa250003bfc4">iOS</label>
-<input type="radio" id="e63396f7976b484093c7000a0490448e-60e234bf2d3f427286c425075dbe07c9" name="e63396f7976b484093c7000a0490448e" class="tab"><label for="e63396f7976b484093c7000a0490448e-60e234bf2d3f427286c425075dbe07c9">Windows</label>
+<input type="radio" id="5b1902aa5f1b46d28011dd99dcf5909b-dee15a9dd0fd42738040f1491db32b53" name="5b1902aa5f1b46d28011dd99dcf5909b" class="tab" checked=""><label for="5b1902aa5f1b46d28011dd99dcf5909b-dee15a9dd0fd42738040f1491db32b53">General</label>
+<input type="radio" id="5b1902aa5f1b46d28011dd99dcf5909b-4fd92c1bc60842a0a88b0846b3bc27bb" name="5b1902aa5f1b46d28011dd99dcf5909b" class="tab"><label for="5b1902aa5f1b46d28011dd99dcf5909b-4fd92c1bc60842a0a88b0846b3bc27bb">Startup</label>
+<input type="radio" id="5b1902aa5f1b46d28011dd99dcf5909b-2897a640532f40f68de93e1a8114b2f2" name="5b1902aa5f1b46d28011dd99dcf5909b" class="tab"><label for="5b1902aa5f1b46d28011dd99dcf5909b-2897a640532f40f68de93e1a8114b2f2">Android</label>
+<input type="radio" id="5b1902aa5f1b46d28011dd99dcf5909b-1dafef28dcf747faa325716e66df6720" name="5b1902aa5f1b46d28011dd99dcf5909b" class="tab"><label for="5b1902aa5f1b46d28011dd99dcf5909b-1dafef28dcf747faa325716e66df6720">iOS</label>
+<input type="radio" id="5b1902aa5f1b46d28011dd99dcf5909b-0446daba364c429a937518f7354cab87" name="5b1902aa5f1b46d28011dd99dcf5909b" class="tab"><label for="5b1902aa5f1b46d28011dd99dcf5909b-0446daba364c429a937518f7354cab87">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -447,11 +447,11 @@ public override void HandleEventsForBackgroundUrl(UIApplication application, str
 </li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="8b511997f318499bad5974e9012fd824-a229823ec87a4f9e9a2f8096ef6d251c" name="8b511997f318499bad5974e9012fd824" class="tab" checked=""><label for="8b511997f318499bad5974e9012fd824-a229823ec87a4f9e9a2f8096ef6d251c">General</label>
-<input type="radio" id="8b511997f318499bad5974e9012fd824-733d175b3c5d4858aeeee8dfe5ef39d8" name="8b511997f318499bad5974e9012fd824" class="tab"><label for="8b511997f318499bad5974e9012fd824-733d175b3c5d4858aeeee8dfe5ef39d8">Startup</label>
-<input type="radio" id="8b511997f318499bad5974e9012fd824-3b5e212b311e42758ffff3b0522d4ace" name="8b511997f318499bad5974e9012fd824" class="tab"><label for="8b511997f318499bad5974e9012fd824-3b5e212b311e42758ffff3b0522d4ace">Android</label>
-<input type="radio" id="8b511997f318499bad5974e9012fd824-3b79f204faf3400a8111ee4628087fed" name="8b511997f318499bad5974e9012fd824" class="tab"><label for="8b511997f318499bad5974e9012fd824-3b79f204faf3400a8111ee4628087fed">iOS</label>
-<input type="radio" id="8b511997f318499bad5974e9012fd824-cd56fd5bd95349a0ba4aa83c651299c2" name="8b511997f318499bad5974e9012fd824" class="tab"><label for="8b511997f318499bad5974e9012fd824-cd56fd5bd95349a0ba4aa83c651299c2">Windows</label>
+<input type="radio" id="cd31a4633df34abd8fc3de47aeaae3bd-cb03d59a2c874f03934538dcedbf2f27" name="cd31a4633df34abd8fc3de47aeaae3bd" class="tab" checked=""><label for="cd31a4633df34abd8fc3de47aeaae3bd-cb03d59a2c874f03934538dcedbf2f27">General</label>
+<input type="radio" id="cd31a4633df34abd8fc3de47aeaae3bd-ab800e1c58304f1fae5d4fd4bb7a8833" name="cd31a4633df34abd8fc3de47aeaae3bd" class="tab"><label for="cd31a4633df34abd8fc3de47aeaae3bd-ab800e1c58304f1fae5d4fd4bb7a8833">Startup</label>
+<input type="radio" id="cd31a4633df34abd8fc3de47aeaae3bd-d9d1d8b4735c467b9deaa7583d102f56" name="cd31a4633df34abd8fc3de47aeaae3bd" class="tab"><label for="cd31a4633df34abd8fc3de47aeaae3bd-d9d1d8b4735c467b9deaa7583d102f56">Android</label>
+<input type="radio" id="cd31a4633df34abd8fc3de47aeaae3bd-b89f0ffc91f64f3fba2b1fb5c2a09f6d" name="cd31a4633df34abd8fc3de47aeaae3bd" class="tab"><label for="cd31a4633df34abd8fc3de47aeaae3bd-b89f0ffc91f64f3fba2b1fb5c2a09f6d">iOS</label>
+<input type="radio" id="cd31a4633df34abd8fc3de47aeaae3bd-17089cd3028d4f829e0212aa01dbb85b" name="cd31a4633df34abd8fc3de47aeaae3bd" class="tab"><label for="cd31a4633df34abd8fc3de47aeaae3bd-17089cd3028d4f829e0212aa01dbb85b">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
