--- a/jobs/getting-started.html
+++ b/jobs/getting-started.html
@@ -150,6 +150,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -236,50 +280,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -357,17 +357,17 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="bb837b7b325747f3973cac336edc65e6-ef663706dc1d45a7aa62edc655555e92" name="bb837b7b325747f3973cac336edc65e6" class="tab" checked><label for="bb837b7b325747f3973cac336edc65e6-ef663706dc1d45a7aa62edc655555e92" >General</label>
-<input type="radio" id="bb837b7b325747f3973cac336edc65e6-8d76c614256d43678ec993fee54708da" name="bb837b7b325747f3973cac336edc65e6" class="tab" ><label for="bb837b7b325747f3973cac336edc65e6-8d76c614256d43678ec993fee54708da" >Startup</label>
-<input type="radio" id="bb837b7b325747f3973cac336edc65e6-7c0dce9d482d4f7eadecd7cb4bc86a8c" name="bb837b7b325747f3973cac336edc65e6" class="tab" ><label for="bb837b7b325747f3973cac336edc65e6-7c0dce9d482d4f7eadecd7cb4bc86a8c" >Android</label>
-<input type="radio" id="bb837b7b325747f3973cac336edc65e6-126b20e6e8de4cd49aadb10924b1b153" name="bb837b7b325747f3973cac336edc65e6" class="tab" ><label for="bb837b7b325747f3973cac336edc65e6-126b20e6e8de4cd49aadb10924b1b153" >iOS</label>
-<input type="radio" id="bb837b7b325747f3973cac336edc65e6-0304db0af5a548a2b560f14ef19937ff" name="bb837b7b325747f3973cac336edc65e6" class="tab" ><label for="bb837b7b325747f3973cac336edc65e6-0304db0af5a548a2b560f14ef19937ff" >Windows</label>
+<input type="radio" id="e646692de5d44a12a78d76bf52f2237a-f66840b4bbb249709a8658189075d829" name="e646692de5d44a12a78d76bf52f2237a" class="tab" checked><label for="e646692de5d44a12a78d76bf52f2237a-f66840b4bbb249709a8658189075d829" >General</label>
+<input type="radio" id="e646692de5d44a12a78d76bf52f2237a-b0eb16c5b4054d6ebf1840f4c7a0a3d3" name="e646692de5d44a12a78d76bf52f2237a" class="tab" ><label for="e646692de5d44a12a78d76bf52f2237a-b0eb16c5b4054d6ebf1840f4c7a0a3d3" >Startup</label>
+<input type="radio" id="e646692de5d44a12a78d76bf52f2237a-cf4b6b1366bd451984212670b15c3800" name="e646692de5d44a12a78d76bf52f2237a" class="tab" ><label for="e646692de5d44a12a78d76bf52f2237a-cf4b6b1366bd451984212670b15c3800" >Android</label>
+<input type="radio" id="e646692de5d44a12a78d76bf52f2237a-e200de78c53f4a18b794ec59e062bdef" name="e646692de5d44a12a78d76bf52f2237a" class="tab" ><label for="e646692de5d44a12a78d76bf52f2237a-e200de78c53f4a18b794ec59e062bdef" >iOS</label>
+<input type="radio" id="e646692de5d44a12a78d76bf52f2237a-edeb52b792364193a3af3b14d1195079" name="e646692de5d44a12a78d76bf52f2237a" class="tab" ><label for="e646692de5d44a12a78d76bf52f2237a-edeb52b792364193a3af3b14d1195079" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
