--- a/locations/geofences.html
+++ b/locations/geofences.html
@@ -150,6 +150,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children active">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child active">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -236,50 +280,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children active">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child active">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -357,17 +357,17 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="a46457186a4d4866ae035c80a7e81b7b-ca074ac3d7394285a550ca2e81f42b4e" name="a46457186a4d4866ae035c80a7e81b7b" class="tab" checked><label for="a46457186a4d4866ae035c80a7e81b7b-ca074ac3d7394285a550ca2e81f42b4e" >General</label>
-<input type="radio" id="a46457186a4d4866ae035c80a7e81b7b-378e360813104df69420e36d23e23573" name="a46457186a4d4866ae035c80a7e81b7b" class="tab" ><label for="a46457186a4d4866ae035c80a7e81b7b-378e360813104df69420e36d23e23573" >Startup</label>
-<input type="radio" id="a46457186a4d4866ae035c80a7e81b7b-2f6ecf62433a449d88484fe29596ac34" name="a46457186a4d4866ae035c80a7e81b7b" class="tab" ><label for="a46457186a4d4866ae035c80a7e81b7b-2f6ecf62433a449d88484fe29596ac34" >Android</label>
-<input type="radio" id="a46457186a4d4866ae035c80a7e81b7b-1968b7a4a88647f0b440495a0b80c649" name="a46457186a4d4866ae035c80a7e81b7b" class="tab" ><label for="a46457186a4d4866ae035c80a7e81b7b-1968b7a4a88647f0b440495a0b80c649" >iOS</label>
-<input type="radio" id="a46457186a4d4866ae035c80a7e81b7b-7e2660e719594c32b7320c63eb22f6db" name="a46457186a4d4866ae035c80a7e81b7b" class="tab" ><label for="a46457186a4d4866ae035c80a7e81b7b-7e2660e719594c32b7320c63eb22f6db" >Windows</label>
+<input type="radio" id="4ab83b66cc624a53948a4bd0a10ab0b9-4e61a83442324f208998e9ddc368c095" name="4ab83b66cc624a53948a4bd0a10ab0b9" class="tab" checked><label for="4ab83b66cc624a53948a4bd0a10ab0b9-4e61a83442324f208998e9ddc368c095" >General</label>
+<input type="radio" id="4ab83b66cc624a53948a4bd0a10ab0b9-5dd76f83fe1d402b91d0a90a7d56063d" name="4ab83b66cc624a53948a4bd0a10ab0b9" class="tab" ><label for="4ab83b66cc624a53948a4bd0a10ab0b9-5dd76f83fe1d402b91d0a90a7d56063d" >Startup</label>
+<input type="radio" id="4ab83b66cc624a53948a4bd0a10ab0b9-da335143ad044181be7644328a6059e8" name="4ab83b66cc624a53948a4bd0a10ab0b9" class="tab" ><label for="4ab83b66cc624a53948a4bd0a10ab0b9-da335143ad044181be7644328a6059e8" >Android</label>
+<input type="radio" id="4ab83b66cc624a53948a4bd0a10ab0b9-52849bfa646a458298ea388ffd269888" name="4ab83b66cc624a53948a4bd0a10ab0b9" class="tab" ><label for="4ab83b66cc624a53948a4bd0a10ab0b9-52849bfa646a458298ea388ffd269888" >iOS</label>
+<input type="radio" id="4ab83b66cc624a53948a4bd0a10ab0b9-42b4d2df22a34c67b9ed2e34593bf561" name="4ab83b66cc624a53948a4bd0a10ab0b9" class="tab" ><label for="4ab83b66cc624a53948a4bd0a10ab0b9-42b4d2df22a34c67b9ed2e34593bf561" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
