--- a/locations/motionactivity.html
+++ b/locations/motionactivity.html
@@ -150,6 +150,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children active">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child active">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -236,50 +280,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children active">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child active">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -357,7 +357,7 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -372,10 +372,10 @@
 <li>Cycling</li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="3735be1ab4554c69954705f12348adb6-92a2d1283325446cba5cd4c3a9b11c28" name="3735be1ab4554c69954705f12348adb6" class="tab" checked><label for="3735be1ab4554c69954705f12348adb6-92a2d1283325446cba5cd4c3a9b11c28" >General</label>
-<input type="radio" id="3735be1ab4554c69954705f12348adb6-a77afb5645b44c069841e2b1b6ba5b8a" name="3735be1ab4554c69954705f12348adb6" class="tab" ><label for="3735be1ab4554c69954705f12348adb6-a77afb5645b44c069841e2b1b6ba5b8a" >Startup</label>
-<input type="radio" id="3735be1ab4554c69954705f12348adb6-2d2b7f1e872b45cb916d09f093077be4" name="3735be1ab4554c69954705f12348adb6" class="tab" ><label for="3735be1ab4554c69954705f12348adb6-2d2b7f1e872b45cb916d09f093077be4" >Android</label>
-<input type="radio" id="3735be1ab4554c69954705f12348adb6-3e7cd71043904892b1d19c85f1ae8bf8" name="3735be1ab4554c69954705f12348adb6" class="tab" ><label for="3735be1ab4554c69954705f12348adb6-3e7cd71043904892b1d19c85f1ae8bf8" >iOS</label>
+<input type="radio" id="8c51c94a895646d3b383ee9590a07e35-bdbf23ced61c4249baa0603234e0468c" name="8c51c94a895646d3b383ee9590a07e35" class="tab" checked><label for="8c51c94a895646d3b383ee9590a07e35-bdbf23ced61c4249baa0603234e0468c" >General</label>
+<input type="radio" id="8c51c94a895646d3b383ee9590a07e35-92629bc24978451f90f3bc02a6de3a03" name="8c51c94a895646d3b383ee9590a07e35" class="tab" ><label for="8c51c94a895646d3b383ee9590a07e35-92629bc24978451f90f3bc02a6de3a03" >Startup</label>
+<input type="radio" id="8c51c94a895646d3b383ee9590a07e35-d7a85d6ced754d4a95a16505ada207fd" name="8c51c94a895646d3b383ee9590a07e35" class="tab" ><label for="8c51c94a895646d3b383ee9590a07e35-d7a85d6ced754d4a95a16505ada207fd" >Android</label>
+<input type="radio" id="8c51c94a895646d3b383ee9590a07e35-9ac6357abae44eb9905ef62afba23354" name="8c51c94a895646d3b383ee9590a07e35" class="tab" ><label for="8c51c94a895646d3b383ee9590a07e35-9ac6357abae44eb9905ef62afba23354" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
