--- a/push/azure.html
+++ b/push/azure.html
@@ -150,6 +150,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -236,50 +280,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -357,17 +357,17 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="f98ca786246d435d9d31a2e9eb3b0da1-e5f352e8c42448d3821efb66ea4ac1c3" name="f98ca786246d435d9d31a2e9eb3b0da1" class="tab" checked><label for="f98ca786246d435d9d31a2e9eb3b0da1-e5f352e8c42448d3821efb66ea4ac1c3" >General</label>
-<input type="radio" id="f98ca786246d435d9d31a2e9eb3b0da1-b42c1b5f0f5a4570968fa2a2e68bd180" name="f98ca786246d435d9d31a2e9eb3b0da1" class="tab" ><label for="f98ca786246d435d9d31a2e9eb3b0da1-b42c1b5f0f5a4570968fa2a2e68bd180" >Startup</label>
-<input type="radio" id="f98ca786246d435d9d31a2e9eb3b0da1-ac9a12845c254ef9a367792c3e48b9ce" name="f98ca786246d435d9d31a2e9eb3b0da1" class="tab" ><label for="f98ca786246d435d9d31a2e9eb3b0da1-ac9a12845c254ef9a367792c3e48b9ce" >Android</label>
-<input type="radio" id="f98ca786246d435d9d31a2e9eb3b0da1-3feee58b9072430f97047e4bb9fb7493" name="f98ca786246d435d9d31a2e9eb3b0da1" class="tab" ><label for="f98ca786246d435d9d31a2e9eb3b0da1-3feee58b9072430f97047e4bb9fb7493" >iOS</label>
-<input type="radio" id="f98ca786246d435d9d31a2e9eb3b0da1-e3aeb2e9fb9c470980d6e1ff94e990bd" name="f98ca786246d435d9d31a2e9eb3b0da1" class="tab" ><label for="f98ca786246d435d9d31a2e9eb3b0da1-e3aeb2e9fb9c470980d6e1ff94e990bd" >Windows</label>
+<input type="radio" id="ac9a98766b5449a498818e3e106f7975-d3d1abc5f476419886a47c2e26b3a54a" name="ac9a98766b5449a498818e3e106f7975" class="tab" checked><label for="ac9a98766b5449a498818e3e106f7975-d3d1abc5f476419886a47c2e26b3a54a" >General</label>
+<input type="radio" id="ac9a98766b5449a498818e3e106f7975-abbabfaee1bc42588a8cea53f1b65324" name="ac9a98766b5449a498818e3e106f7975" class="tab" ><label for="ac9a98766b5449a498818e3e106f7975-abbabfaee1bc42588a8cea53f1b65324" >Startup</label>
+<input type="radio" id="ac9a98766b5449a498818e3e106f7975-86e8e72fb8084223aa57e6d7ea557c18" name="ac9a98766b5449a498818e3e106f7975" class="tab" ><label for="ac9a98766b5449a498818e3e106f7975-86e8e72fb8084223aa57e6d7ea557c18" >Android</label>
+<input type="radio" id="ac9a98766b5449a498818e3e106f7975-aa27b0f6afe843c0b6d544efacfcddce" name="ac9a98766b5449a498818e3e106f7975" class="tab" ><label for="ac9a98766b5449a498818e3e106f7975-aa27b0f6afe843c0b6d544efacfcddce" >iOS</label>
+<input type="radio" id="ac9a98766b5449a498818e3e106f7975-e0379fec5da34ff2936f81868e980a2e" name="ac9a98766b5449a498818e3e106f7975" class="tab" ><label for="ac9a98766b5449a498818e3e106f7975-e0379fec5da34ff2936f81868e980a2e" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
