--- a/push/native.html
+++ b/push/native.html
@@ -150,6 +150,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -236,50 +280,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -357,7 +357,7 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -365,11 +365,11 @@
                                     <p>Native push is the root of all other push providers.  It works at the native OS level and is usually feeding other providers like Azure Notification Hubs and Firebase.  As such, the setup instructions found
 within this document generally apply to all.</p>
 <div class="tab-wrap">
-<input type="radio" id="64c9c2fc613743c3a63336be0ffaa08b-17d4f40373a84cbc852ad54bd7bd39eb" name="64c9c2fc613743c3a63336be0ffaa08b" class="tab" checked><label for="64c9c2fc613743c3a63336be0ffaa08b-17d4f40373a84cbc852ad54bd7bd39eb" >General</label>
-<input type="radio" id="64c9c2fc613743c3a63336be0ffaa08b-cecca64385b84c67998d811242b15ccc" name="64c9c2fc613743c3a63336be0ffaa08b" class="tab" ><label for="64c9c2fc613743c3a63336be0ffaa08b-cecca64385b84c67998d811242b15ccc" >Startup</label>
-<input type="radio" id="64c9c2fc613743c3a63336be0ffaa08b-4c92412a1a934adc86b8a9d026c7f6dd" name="64c9c2fc613743c3a63336be0ffaa08b" class="tab" ><label for="64c9c2fc613743c3a63336be0ffaa08b-4c92412a1a934adc86b8a9d026c7f6dd" >Android</label>
-<input type="radio" id="64c9c2fc613743c3a63336be0ffaa08b-9558ab7da16742c983f34eb2e7dbf145" name="64c9c2fc613743c3a63336be0ffaa08b" class="tab" ><label for="64c9c2fc613743c3a63336be0ffaa08b-9558ab7da16742c983f34eb2e7dbf145" >iOS</label>
-<input type="radio" id="64c9c2fc613743c3a63336be0ffaa08b-6946fdd2c0a040d8b1bd2dbbb9f88ac1" name="64c9c2fc613743c3a63336be0ffaa08b" class="tab" ><label for="64c9c2fc613743c3a63336be0ffaa08b-6946fdd2c0a040d8b1bd2dbbb9f88ac1" >Windows</label>
+<input type="radio" id="67be71768bad494ab5f8a15c46ce9646-8a0ab37e64d6476abf2d6c1db3f01663" name="67be71768bad494ab5f8a15c46ce9646" class="tab" checked><label for="67be71768bad494ab5f8a15c46ce9646-8a0ab37e64d6476abf2d6c1db3f01663" >General</label>
+<input type="radio" id="67be71768bad494ab5f8a15c46ce9646-b3d262d80e4241b1944f4a26ce3620fd" name="67be71768bad494ab5f8a15c46ce9646" class="tab" ><label for="67be71768bad494ab5f8a15c46ce9646-b3d262d80e4241b1944f4a26ce3620fd" >Startup</label>
+<input type="radio" id="67be71768bad494ab5f8a15c46ce9646-d157f26ed7b648b29f2c7780ec2cae75" name="67be71768bad494ab5f8a15c46ce9646" class="tab" ><label for="67be71768bad494ab5f8a15c46ce9646-d157f26ed7b648b29f2c7780ec2cae75" >Android</label>
+<input type="radio" id="67be71768bad494ab5f8a15c46ce9646-899cc460050b4552bd3e8cf45e600623" name="67be71768bad494ab5f8a15c46ce9646" class="tab" ><label for="67be71768bad494ab5f8a15c46ce9646-899cc460050b4552bd3e8cf45e600623" >iOS</label>
+<input type="radio" id="67be71768bad494ab5f8a15c46ce9646-840acc1e5e5148c6b078903b779bdc30" name="67be71768bad494ab5f8a15c46ce9646" class="tab" ><label for="67be71768bad494ab5f8a15c46ce9646-840acc1e5e5148c6b078903b779bdc30" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
