--- a/push/onesignal.html
+++ b/push/onesignal.html
@@ -150,6 +150,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -236,50 +280,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -357,16 +357,16 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="3f601cab2fb14681893799687f3c143d-6a88095f1e564dcf92d2133fecb5c16d" name="3f601cab2fb14681893799687f3c143d" class="tab" checked><label for="3f601cab2fb14681893799687f3c143d-6a88095f1e564dcf92d2133fecb5c16d" >General</label>
-<input type="radio" id="3f601cab2fb14681893799687f3c143d-f8f3932f99a7495db9afb4e42bbcc1d1" name="3f601cab2fb14681893799687f3c143d" class="tab" ><label for="3f601cab2fb14681893799687f3c143d-f8f3932f99a7495db9afb4e42bbcc1d1" >Startup</label>
-<input type="radio" id="3f601cab2fb14681893799687f3c143d-a0e06ed59c0a4a0d81ae25fba2eeabad" name="3f601cab2fb14681893799687f3c143d" class="tab" ><label for="3f601cab2fb14681893799687f3c143d-a0e06ed59c0a4a0d81ae25fba2eeabad" >Android</label>
-<input type="radio" id="3f601cab2fb14681893799687f3c143d-027345104a564ca9ae5d5a9e8320b20a" name="3f601cab2fb14681893799687f3c143d" class="tab" ><label for="3f601cab2fb14681893799687f3c143d-027345104a564ca9ae5d5a9e8320b20a" >iOS</label>
+<input type="radio" id="5a2f99ff79e5457582a2e42234b3a0da-43b652b44af2402bad6ad544e27a07ef" name="5a2f99ff79e5457582a2e42234b3a0da" class="tab" checked><label for="5a2f99ff79e5457582a2e42234b3a0da-43b652b44af2402bad6ad544e27a07ef" >General</label>
+<input type="radio" id="5a2f99ff79e5457582a2e42234b3a0da-ab4a18656bc642b4918cafb224400e8f" name="5a2f99ff79e5457582a2e42234b3a0da" class="tab" ><label for="5a2f99ff79e5457582a2e42234b3a0da-ab4a18656bc642b4918cafb224400e8f" >Startup</label>
+<input type="radio" id="5a2f99ff79e5457582a2e42234b3a0da-98bc80258e684c5baf9178410af9620a" name="5a2f99ff79e5457582a2e42234b3a0da" class="tab" ><label for="5a2f99ff79e5457582a2e42234b3a0da-98bc80258e684c5baf9178410af9620a" >Android</label>
+<input type="radio" id="5a2f99ff79e5457582a2e42234b3a0da-4e760c8161974121a85a3daffa566096" name="5a2f99ff79e5457582a2e42234b3a0da" class="tab" ><label for="5a2f99ff79e5457582a2e42234b3a0da-4e760c8161974121a85a3daffa566096" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
