--- a/sensors/accelerometer.html
+++ b/sensors/accelerometer.html
@@ -150,6 +150,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -236,50 +280,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
@@ -357,17 +357,17 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="f4e395d77280418887e8753115f4ed3d-a3ab8ef2c7334dc6b05bb1bad75c8c09" name="f4e395d77280418887e8753115f4ed3d" class="tab" checked><label for="f4e395d77280418887e8753115f4ed3d-a3ab8ef2c7334dc6b05bb1bad75c8c09" >General</label>
-<input type="radio" id="f4e395d77280418887e8753115f4ed3d-0cd9c369253b4e23a1ff64680a524690" name="f4e395d77280418887e8753115f4ed3d" class="tab" ><label for="f4e395d77280418887e8753115f4ed3d-0cd9c369253b4e23a1ff64680a524690" >Startup</label>
-<input type="radio" id="f4e395d77280418887e8753115f4ed3d-1a1e460f95864cfc9ea8bd042a293df0" name="f4e395d77280418887e8753115f4ed3d" class="tab" ><label for="f4e395d77280418887e8753115f4ed3d-1a1e460f95864cfc9ea8bd042a293df0" >Android</label>
-<input type="radio" id="f4e395d77280418887e8753115f4ed3d-c9f670419e134c90a0c050a1e94e8609" name="f4e395d77280418887e8753115f4ed3d" class="tab" ><label for="f4e395d77280418887e8753115f4ed3d-c9f670419e134c90a0c050a1e94e8609" >iOS</label>
-<input type="radio" id="f4e395d77280418887e8753115f4ed3d-58b655667cfe471ab36c73ec15f521c2" name="f4e395d77280418887e8753115f4ed3d" class="tab" ><label for="f4e395d77280418887e8753115f4ed3d-58b655667cfe471ab36c73ec15f521c2" >Windows</label>
+<input type="radio" id="b5dd9c3f99ba42809a579f1c920546fe-a81283ce9b0147ba83c898501d6a3325" name="b5dd9c3f99ba42809a579f1c920546fe" class="tab" checked><label for="b5dd9c3f99ba42809a579f1c920546fe-a81283ce9b0147ba83c898501d6a3325" >General</label>
+<input type="radio" id="b5dd9c3f99ba42809a579f1c920546fe-f2e4287f13324aa4a6b6db382d41a692" name="b5dd9c3f99ba42809a579f1c920546fe" class="tab" ><label for="b5dd9c3f99ba42809a579f1c920546fe-f2e4287f13324aa4a6b6db382d41a692" >Startup</label>
+<input type="radio" id="b5dd9c3f99ba42809a579f1c920546fe-c9b85f49c2d14e32a78a94d8c3b147f0" name="b5dd9c3f99ba42809a579f1c920546fe" class="tab" ><label for="b5dd9c3f99ba42809a579f1c920546fe-c9b85f49c2d14e32a78a94d8c3b147f0" >Android</label>
+<input type="radio" id="b5dd9c3f99ba42809a579f1c920546fe-c5d405e5981548fd8fae8ed97dd2448f" name="b5dd9c3f99ba42809a579f1c920546fe" class="tab" ><label for="b5dd9c3f99ba42809a579f1c920546fe-c5d405e5981548fd8fae8ed97dd2448f" >iOS</label>
+<input type="radio" id="b5dd9c3f99ba42809a579f1c920546fe-9c43a8785ccb4677ae4de5631a2dff9d" name="b5dd9c3f99ba42809a579f1c920546fe" class="tab" ><label for="b5dd9c3f99ba42809a579f1c920546fe-9c43a8785ccb4677ae4de5631a2dff9d" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
