--- a/sensors/ambientlight.html
+++ b/sensors/ambientlight.html
@@ -150,6 +150,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -236,50 +280,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
@@ -357,16 +357,16 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="35bafa1fb2f34c3d9d6b9bd37eab0f48-810fcaac441948debd2532c722735ad5" name="35bafa1fb2f34c3d9d6b9bd37eab0f48" class="tab" checked><label for="35bafa1fb2f34c3d9d6b9bd37eab0f48-810fcaac441948debd2532c722735ad5" >General</label>
-<input type="radio" id="35bafa1fb2f34c3d9d6b9bd37eab0f48-7f9694b54f6b4ad88bc31ce404f8f4e7" name="35bafa1fb2f34c3d9d6b9bd37eab0f48" class="tab" ><label for="35bafa1fb2f34c3d9d6b9bd37eab0f48-7f9694b54f6b4ad88bc31ce404f8f4e7" >Startup</label>
-<input type="radio" id="35bafa1fb2f34c3d9d6b9bd37eab0f48-259d2eb3128741fa82fa3e2404a4ba7a" name="35bafa1fb2f34c3d9d6b9bd37eab0f48" class="tab" ><label for="35bafa1fb2f34c3d9d6b9bd37eab0f48-259d2eb3128741fa82fa3e2404a4ba7a" >Android</label>
-<input type="radio" id="35bafa1fb2f34c3d9d6b9bd37eab0f48-99542434b27044098bbc9a578c11cf85" name="35bafa1fb2f34c3d9d6b9bd37eab0f48" class="tab" ><label for="35bafa1fb2f34c3d9d6b9bd37eab0f48-99542434b27044098bbc9a578c11cf85" >Windows</label>
+<input type="radio" id="0d6db7d650964dfd9f44f6378562e6dc-1950e2d3a968499f971ad2af245d0dea" name="0d6db7d650964dfd9f44f6378562e6dc" class="tab" checked><label for="0d6db7d650964dfd9f44f6378562e6dc-1950e2d3a968499f971ad2af245d0dea" >General</label>
+<input type="radio" id="0d6db7d650964dfd9f44f6378562e6dc-39b6207ceade405fbfc205c3c8a86eb6" name="0d6db7d650964dfd9f44f6378562e6dc" class="tab" ><label for="0d6db7d650964dfd9f44f6378562e6dc-39b6207ceade405fbfc205c3c8a86eb6" >Startup</label>
+<input type="radio" id="0d6db7d650964dfd9f44f6378562e6dc-c2fed136907c4862afe924bdcfa776ab" name="0d6db7d650964dfd9f44f6378562e6dc" class="tab" ><label for="0d6db7d650964dfd9f44f6378562e6dc-c2fed136907c4862afe924bdcfa776ab" >Android</label>
+<input type="radio" id="0d6db7d650964dfd9f44f6378562e6dc-000fbec5ab484835924ec8be2a3bf1d6" name="0d6db7d650964dfd9f44f6378562e6dc" class="tab" ><label for="0d6db7d650964dfd9f44f6378562e6dc-000fbec5ab484835924ec8be2a3bf1d6" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
