--- a/sensors/compass.html
+++ b/sensors/compass.html
@@ -150,6 +150,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -236,50 +280,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
@@ -357,17 +357,17 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="cbbee5c5855d4af295467fb1ea50852a-a7af78412f644df28a8de546e5bdf117" name="cbbee5c5855d4af295467fb1ea50852a" class="tab" checked><label for="cbbee5c5855d4af295467fb1ea50852a-a7af78412f644df28a8de546e5bdf117" >General</label>
-<input type="radio" id="cbbee5c5855d4af295467fb1ea50852a-8bf6361f126841cab0ba03a25ac1ffcf" name="cbbee5c5855d4af295467fb1ea50852a" class="tab" ><label for="cbbee5c5855d4af295467fb1ea50852a-8bf6361f126841cab0ba03a25ac1ffcf" >Startup</label>
-<input type="radio" id="cbbee5c5855d4af295467fb1ea50852a-10483b201dc741b6a953d4ff6d52a2fe" name="cbbee5c5855d4af295467fb1ea50852a" class="tab" ><label for="cbbee5c5855d4af295467fb1ea50852a-10483b201dc741b6a953d4ff6d52a2fe" >Android</label>
-<input type="radio" id="cbbee5c5855d4af295467fb1ea50852a-f6aaf2abdb0146f9982b0791f7f89ae4" name="cbbee5c5855d4af295467fb1ea50852a" class="tab" ><label for="cbbee5c5855d4af295467fb1ea50852a-f6aaf2abdb0146f9982b0791f7f89ae4" >iOS</label>
-<input type="radio" id="cbbee5c5855d4af295467fb1ea50852a-ff06e032f8984d989bdb3304a64de684" name="cbbee5c5855d4af295467fb1ea50852a" class="tab" ><label for="cbbee5c5855d4af295467fb1ea50852a-ff06e032f8984d989bdb3304a64de684" >Windows</label>
+<input type="radio" id="64bfbf8e2ee2434e938e309921554c7b-dc9b94aa197c40da8dc70a2fbf83df5a" name="64bfbf8e2ee2434e938e309921554c7b" class="tab" checked><label for="64bfbf8e2ee2434e938e309921554c7b-dc9b94aa197c40da8dc70a2fbf83df5a" >General</label>
+<input type="radio" id="64bfbf8e2ee2434e938e309921554c7b-8b5cfb8f8ed846b48570b49fffc455f2" name="64bfbf8e2ee2434e938e309921554c7b" class="tab" ><label for="64bfbf8e2ee2434e938e309921554c7b-8b5cfb8f8ed846b48570b49fffc455f2" >Startup</label>
+<input type="radio" id="64bfbf8e2ee2434e938e309921554c7b-d61082f860264b4b9572c09694d4ee2b" name="64bfbf8e2ee2434e938e309921554c7b" class="tab" ><label for="64bfbf8e2ee2434e938e309921554c7b-d61082f860264b4b9572c09694d4ee2b" >Android</label>
+<input type="radio" id="64bfbf8e2ee2434e938e309921554c7b-0b473fcff06b429698c1b6cb83a671b4" name="64bfbf8e2ee2434e938e309921554c7b" class="tab" ><label for="64bfbf8e2ee2434e938e309921554c7b-0b473fcff06b429698c1b6cb83a671b4" >iOS</label>
+<input type="radio" id="64bfbf8e2ee2434e938e309921554c7b-a2f99aa004864cdfa36fc86c30094f96" name="64bfbf8e2ee2434e938e309921554c7b" class="tab" ><label for="64bfbf8e2ee2434e938e309921554c7b-a2f99aa004864cdfa36fc86c30094f96" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
