--- a/sensors/humidity.html
+++ b/sensors/humidity.html
@@ -150,6 +150,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -236,50 +280,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
@@ -357,15 +357,15 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="1375d67143de4ffa8a7b11cd1066efd7-2528cad6decc41b1ad1057656a0e7f98" name="1375d67143de4ffa8a7b11cd1066efd7" class="tab" checked><label for="1375d67143de4ffa8a7b11cd1066efd7-2528cad6decc41b1ad1057656a0e7f98" >General</label>
-<input type="radio" id="1375d67143de4ffa8a7b11cd1066efd7-97061f8b84b941ff8bb9e396980d2ec4" name="1375d67143de4ffa8a7b11cd1066efd7" class="tab" ><label for="1375d67143de4ffa8a7b11cd1066efd7-97061f8b84b941ff8bb9e396980d2ec4" >Startup</label>
-<input type="radio" id="1375d67143de4ffa8a7b11cd1066efd7-d6c5fa2761b44a03a39a57bb5509b0e2" name="1375d67143de4ffa8a7b11cd1066efd7" class="tab" ><label for="1375d67143de4ffa8a7b11cd1066efd7-d6c5fa2761b44a03a39a57bb5509b0e2" >Android</label>
+<input type="radio" id="948c25fbdd244a0c948cc2da421a0b77-7928efc082964290b183ed71af3d9faf" name="948c25fbdd244a0c948cc2da421a0b77" class="tab" checked><label for="948c25fbdd244a0c948cc2da421a0b77-7928efc082964290b183ed71af3d9faf" >General</label>
+<input type="radio" id="948c25fbdd244a0c948cc2da421a0b77-99e6616b17944b0c92f6adf6347ceef5" name="948c25fbdd244a0c948cc2da421a0b77" class="tab" ><label for="948c25fbdd244a0c948cc2da421a0b77-99e6616b17944b0c92f6adf6347ceef5" >Startup</label>
+<input type="radio" id="948c25fbdd244a0c948cc2da421a0b77-24ae4263d11d482e95122a94109c255d" name="948c25fbdd244a0c948cc2da421a0b77" class="tab" ><label for="948c25fbdd244a0c948cc2da421a0b77-24ae4263d11d482e95122a94109c255d" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
