--- a/sensors/pedometer.html
+++ b/sensors/pedometer.html
@@ -150,6 +150,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -236,50 +280,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
@@ -357,17 +357,17 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="baf4e0470f18425d8e37cc77b121034b-90e55329414d4a5b936313ed12c09995" name="baf4e0470f18425d8e37cc77b121034b" class="tab" checked><label for="baf4e0470f18425d8e37cc77b121034b-90e55329414d4a5b936313ed12c09995" >General</label>
-<input type="radio" id="baf4e0470f18425d8e37cc77b121034b-de888ce9bb174455b86536e89e2e4bbd" name="baf4e0470f18425d8e37cc77b121034b" class="tab" ><label for="baf4e0470f18425d8e37cc77b121034b-de888ce9bb174455b86536e89e2e4bbd" >Startup</label>
-<input type="radio" id="baf4e0470f18425d8e37cc77b121034b-97afdbec748e45a6bff37ad3ad4181fe" name="baf4e0470f18425d8e37cc77b121034b" class="tab" ><label for="baf4e0470f18425d8e37cc77b121034b-97afdbec748e45a6bff37ad3ad4181fe" >Android</label>
-<input type="radio" id="baf4e0470f18425d8e37cc77b121034b-e6eb910610514df9b7a4b0bb2b7a03d3" name="baf4e0470f18425d8e37cc77b121034b" class="tab" ><label for="baf4e0470f18425d8e37cc77b121034b-e6eb910610514df9b7a4b0bb2b7a03d3" >iOS</label>
-<input type="radio" id="baf4e0470f18425d8e37cc77b121034b-146465c428e341108ad33345468ee5d2" name="baf4e0470f18425d8e37cc77b121034b" class="tab" ><label for="baf4e0470f18425d8e37cc77b121034b-146465c428e341108ad33345468ee5d2" >Windows</label>
+<input type="radio" id="0791aab9d1554c2b916f88dd5edd1358-876b2deca0424903b35183cfb9020795" name="0791aab9d1554c2b916f88dd5edd1358" class="tab" checked><label for="0791aab9d1554c2b916f88dd5edd1358-876b2deca0424903b35183cfb9020795" >General</label>
+<input type="radio" id="0791aab9d1554c2b916f88dd5edd1358-a6eb9940f89c47468a779a6c4103d164" name="0791aab9d1554c2b916f88dd5edd1358" class="tab" ><label for="0791aab9d1554c2b916f88dd5edd1358-a6eb9940f89c47468a779a6c4103d164" >Startup</label>
+<input type="radio" id="0791aab9d1554c2b916f88dd5edd1358-6c14339d92a94c4d93ae6caec0909f1c" name="0791aab9d1554c2b916f88dd5edd1358" class="tab" ><label for="0791aab9d1554c2b916f88dd5edd1358-6c14339d92a94c4d93ae6caec0909f1c" >Android</label>
+<input type="radio" id="0791aab9d1554c2b916f88dd5edd1358-e98faa322f4e45eaa9f05544406b18e0" name="0791aab9d1554c2b916f88dd5edd1358" class="tab" ><label for="0791aab9d1554c2b916f88dd5edd1358-e98faa322f4e45eaa9f05544406b18e0" >iOS</label>
+<input type="radio" id="0791aab9d1554c2b916f88dd5edd1358-4825de2d8b8f40279ab002fe5f521ce0" name="0791aab9d1554c2b916f88dd5edd1358" class="tab" ><label for="0791aab9d1554c2b916f88dd5edd1358-4825de2d8b8f40279ab002fe5f521ce0" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
