--- a/sensors/proximity.html
+++ b/sensors/proximity.html
@@ -150,6 +150,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -236,50 +280,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
@@ -357,16 +357,16 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="36dbbcd301804129a114dbe8b15c83b0-e7e1e07ea0c246c498f9a7c8edb6861e" name="36dbbcd301804129a114dbe8b15c83b0" class="tab" checked><label for="36dbbcd301804129a114dbe8b15c83b0-e7e1e07ea0c246c498f9a7c8edb6861e" >General</label>
-<input type="radio" id="36dbbcd301804129a114dbe8b15c83b0-cf8532275788414f85e30b51de3895d3" name="36dbbcd301804129a114dbe8b15c83b0" class="tab" ><label for="36dbbcd301804129a114dbe8b15c83b0-cf8532275788414f85e30b51de3895d3" >Startup</label>
-<input type="radio" id="36dbbcd301804129a114dbe8b15c83b0-af5c3e08b1b546efa2356b2869103150" name="36dbbcd301804129a114dbe8b15c83b0" class="tab" ><label for="36dbbcd301804129a114dbe8b15c83b0-af5c3e08b1b546efa2356b2869103150" >Android</label>
-<input type="radio" id="36dbbcd301804129a114dbe8b15c83b0-5909351c29dd4de19d6cfdca6698f98b" name="36dbbcd301804129a114dbe8b15c83b0" class="tab" ><label for="36dbbcd301804129a114dbe8b15c83b0-5909351c29dd4de19d6cfdca6698f98b" >iOS</label>
+<input type="radio" id="f603515bd1d84c2fbf0c99b92b275eb3-ad702fcfa511404c93e4ea12d5029be0" name="f603515bd1d84c2fbf0c99b92b275eb3" class="tab" checked><label for="f603515bd1d84c2fbf0c99b92b275eb3-ad702fcfa511404c93e4ea12d5029be0" >General</label>
+<input type="radio" id="f603515bd1d84c2fbf0c99b92b275eb3-bf2ce1b46e914bd980de7ceda2768d76" name="f603515bd1d84c2fbf0c99b92b275eb3" class="tab" ><label for="f603515bd1d84c2fbf0c99b92b275eb3-bf2ce1b46e914bd980de7ceda2768d76" >Startup</label>
+<input type="radio" id="f603515bd1d84c2fbf0c99b92b275eb3-5440c6e519ef4dd18377f32982fe9efb" name="f603515bd1d84c2fbf0c99b92b275eb3" class="tab" ><label for="f603515bd1d84c2fbf0c99b92b275eb3-5440c6e519ef4dd18377f32982fe9efb" >Android</label>
+<input type="radio" id="f603515bd1d84c2fbf0c99b92b275eb3-1addec86d6894220a5eb4f7b0385ffcf" name="f603515bd1d84c2fbf0c99b92b275eb3" class="tab" ><label for="f603515bd1d84c2fbf0c99b92b275eb3-1addec86d6894220a5eb4f7b0385ffcf" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
