--- a/sensors/temperature.html
+++ b/sensors/temperature.html
@@ -150,6 +150,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -236,50 +280,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
@@ -357,15 +357,15 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="07cb9fc4b16c4b229a94cf4bd884f08b-f4322fbace0e4d81aa548efb8a31a145" name="07cb9fc4b16c4b229a94cf4bd884f08b" class="tab" checked><label for="07cb9fc4b16c4b229a94cf4bd884f08b-f4322fbace0e4d81aa548efb8a31a145" >General</label>
-<input type="radio" id="07cb9fc4b16c4b229a94cf4bd884f08b-5e37c77e2e61423b90bf85ab4f61516f" name="07cb9fc4b16c4b229a94cf4bd884f08b" class="tab" ><label for="07cb9fc4b16c4b229a94cf4bd884f08b-5e37c77e2e61423b90bf85ab4f61516f" >Startup</label>
-<input type="radio" id="07cb9fc4b16c4b229a94cf4bd884f08b-93404d62db1d4195892ebc88ce6d05a9" name="07cb9fc4b16c4b229a94cf4bd884f08b" class="tab" ><label for="07cb9fc4b16c4b229a94cf4bd884f08b-93404d62db1d4195892ebc88ce6d05a9" >Android</label>
+<input type="radio" id="9b0f76d8cc5a46028cb9b4449462824e-c21a830fd0534ed29895c88fad56070d" name="9b0f76d8cc5a46028cb9b4449462824e" class="tab" checked><label for="9b0f76d8cc5a46028cb9b4449462824e-c21a830fd0534ed29895c88fad56070d" >General</label>
+<input type="radio" id="9b0f76d8cc5a46028cb9b4449462824e-a0038f9da2e040ca842774338bc45adf" name="9b0f76d8cc5a46028cb9b4449462824e" class="tab" ><label for="9b0f76d8cc5a46028cb9b4449462824e-a0038f9da2e040ca842774338bc45adf" >Startup</label>
+<input type="radio" id="9b0f76d8cc5a46028cb9b4449462824e-8f04234b3e7f4ef08297fad254291bc6" name="9b0f76d8cc5a46028cb9b4449462824e" class="tab" ><label for="9b0f76d8cc5a46028cb9b4449462824e-8f04234b3e7f4ef08297fad254291bc6" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
