--- a/setup/uwp.html
+++ b/setup/uwp.html
@@ -150,6 +150,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -236,50 +280,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -357,7 +357,7 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -369,11 +369,11 @@
 <img src="images/uwp_runtime_proj.png" width="550" />
 <ol start="2">
 <li>Add <div class="tab-wrap">
-<input type="radio" id="be437ee3a8004cd098e6cb4751133fc6-6dfdd77d8ce842bd82d5facaedd395cc" name="be437ee3a8004cd098e6cb4751133fc6" class="tab" checked><label for="be437ee3a8004cd098e6cb4751133fc6-6dfdd77d8ce842bd82d5facaedd395cc" >General</label>
-<input type="radio" id="be437ee3a8004cd098e6cb4751133fc6-30d8e601d9a5463f8298e0a97c818a72" name="be437ee3a8004cd098e6cb4751133fc6" class="tab" ><label for="be437ee3a8004cd098e6cb4751133fc6-30d8e601d9a5463f8298e0a97c818a72" >Startup</label>
-<input type="radio" id="be437ee3a8004cd098e6cb4751133fc6-2ca2b54fb6c64501a21de08c16a6ab56" name="be437ee3a8004cd098e6cb4751133fc6" class="tab" ><label for="be437ee3a8004cd098e6cb4751133fc6-2ca2b54fb6c64501a21de08c16a6ab56" >Android</label>
-<input type="radio" id="be437ee3a8004cd098e6cb4751133fc6-24084db259ca4f26bff45563cf836948" name="be437ee3a8004cd098e6cb4751133fc6" class="tab" ><label for="be437ee3a8004cd098e6cb4751133fc6-24084db259ca4f26bff45563cf836948" >iOS</label>
-<input type="radio" id="be437ee3a8004cd098e6cb4751133fc6-97560ca9282c47368b7432dd45c85b9d" name="be437ee3a8004cd098e6cb4751133fc6" class="tab" ><label for="be437ee3a8004cd098e6cb4751133fc6-97560ca9282c47368b7432dd45c85b9d" >Windows</label></li>
+<input type="radio" id="fbaf68e050684f238fe4f065864d3464-012facfbde254c98977760ae6da48f52" name="fbaf68e050684f238fe4f065864d3464" class="tab" checked><label for="fbaf68e050684f238fe4f065864d3464-012facfbde254c98977760ae6da48f52" >General</label>
+<input type="radio" id="fbaf68e050684f238fe4f065864d3464-63f5b91e4e064a6dbdc11f0de82b2a0c" name="fbaf68e050684f238fe4f065864d3464" class="tab" ><label for="fbaf68e050684f238fe4f065864d3464-63f5b91e4e064a6dbdc11f0de82b2a0c" >Startup</label>
+<input type="radio" id="fbaf68e050684f238fe4f065864d3464-8788a97ab9ea4d15b8a738933de4ee41" name="fbaf68e050684f238fe4f065864d3464" class="tab" ><label for="fbaf68e050684f238fe4f065864d3464-8788a97ab9ea4d15b8a738933de4ee41" >Android</label>
+<input type="radio" id="fbaf68e050684f238fe4f065864d3464-f4de6b19ea454938b1ad8c501f67e335" name="fbaf68e050684f238fe4f065864d3464" class="tab" ><label for="fbaf68e050684f238fe4f065864d3464-f4de6b19ea454938b1ad8c501f67e335" >iOS</label>
+<input type="radio" id="fbaf68e050684f238fe4f065864d3464-d974acb143444cee8117243c96c7d934" name="fbaf68e050684f238fe4f065864d3464" class="tab" ><label for="fbaf68e050684f238fe4f065864d3464-d974acb143444cee8117243c96c7d934" >Windows</label></li>
 </ol>
 <div class="tab__content">
 <p>|Area|Info|
