--- a/beacons/ranging.html
+++ b/beacons/ranging.html
@@ -150,6 +150,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
@@ -236,50 +280,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -357,17 +357,17 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Ranging is a foreground only operation.  You can scan for &quot;all&quot; beacons with a particular filter set.  Meaning if you only filter by UUID, all beacons under that UUID will be returned.  With ranging, all of the identifier values are provided.  You are</p>
 <div class="tab-wrap">
-<input type="radio" id="a8ff44497ab5469a899539b31ae8b30d-88e3300f29be497d81ef9cf3af8fad9d" name="a8ff44497ab5469a899539b31ae8b30d" class="tab" checked><label for="a8ff44497ab5469a899539b31ae8b30d-88e3300f29be497d81ef9cf3af8fad9d" >General</label>
-<input type="radio" id="a8ff44497ab5469a899539b31ae8b30d-ad75c734ea514e8f9a1d44c54babc959" name="a8ff44497ab5469a899539b31ae8b30d" class="tab" ><label for="a8ff44497ab5469a899539b31ae8b30d-ad75c734ea514e8f9a1d44c54babc959" >Startup</label>
-<input type="radio" id="a8ff44497ab5469a899539b31ae8b30d-28ad157e5cb54e5f87cc1a2adf8ee3de" name="a8ff44497ab5469a899539b31ae8b30d" class="tab" ><label for="a8ff44497ab5469a899539b31ae8b30d-28ad157e5cb54e5f87cc1a2adf8ee3de" >Android</label>
-<input type="radio" id="a8ff44497ab5469a899539b31ae8b30d-55cb439c093a4300a1d8df708b3b3f5a" name="a8ff44497ab5469a899539b31ae8b30d" class="tab" ><label for="a8ff44497ab5469a899539b31ae8b30d-55cb439c093a4300a1d8df708b3b3f5a" >iOS</label>
+<input type="radio" id="d3d9d1571be0401a90609fa96222bb9a-0a53eb590cc94648bd93cc941d58c8e7" name="d3d9d1571be0401a90609fa96222bb9a" class="tab" checked><label for="d3d9d1571be0401a90609fa96222bb9a-0a53eb590cc94648bd93cc941d58c8e7" >General</label>
+<input type="radio" id="d3d9d1571be0401a90609fa96222bb9a-6e6e043239bd41cda6a3bf4d5a7f7de2" name="d3d9d1571be0401a90609fa96222bb9a" class="tab" ><label for="d3d9d1571be0401a90609fa96222bb9a-6e6e043239bd41cda6a3bf4d5a7f7de2" >Startup</label>
+<input type="radio" id="d3d9d1571be0401a90609fa96222bb9a-60a56a124e0b4decb4830ed005a24a9e" name="d3d9d1571be0401a90609fa96222bb9a" class="tab" ><label for="d3d9d1571be0401a90609fa96222bb9a-60a56a124e0b4decb4830ed005a24a9e" >Android</label>
+<input type="radio" id="d3d9d1571be0401a90609fa96222bb9a-80507d9add4a47258bcee8cc2da5be17" name="d3d9d1571be0401a90609fa96222bb9a" class="tab" ><label for="d3d9d1571be0401a90609fa96222bb9a-80507d9add4a47258bcee8cc2da5be17" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
