--- a/blehosting/getting-started.html
+++ b/blehosting/getting-started.html
@@ -150,6 +150,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -236,50 +280,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -357,16 +357,16 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="17cd6085868c4879bfe77d204d270214-126c373e069347c5bf5ca8bc3157c217" name="17cd6085868c4879bfe77d204d270214" class="tab" checked><label for="17cd6085868c4879bfe77d204d270214-126c373e069347c5bf5ca8bc3157c217" >General</label>
-<input type="radio" id="17cd6085868c4879bfe77d204d270214-a3f591ad24174817be3c5b7875792430" name="17cd6085868c4879bfe77d204d270214" class="tab" ><label for="17cd6085868c4879bfe77d204d270214-a3f591ad24174817be3c5b7875792430" >Startup</label>
-<input type="radio" id="17cd6085868c4879bfe77d204d270214-e7940029f95741d88e90c03d0899e2c5" name="17cd6085868c4879bfe77d204d270214" class="tab" ><label for="17cd6085868c4879bfe77d204d270214-e7940029f95741d88e90c03d0899e2c5" >Android</label>
-<input type="radio" id="17cd6085868c4879bfe77d204d270214-9ca2a394ec2b462cb999969f8e7f1d49" name="17cd6085868c4879bfe77d204d270214" class="tab" ><label for="17cd6085868c4879bfe77d204d270214-9ca2a394ec2b462cb999969f8e7f1d49" >iOS</label>
+<input type="radio" id="9c6b6d824a0c4c4295f28705926efe81-88ff8ec92d82454489832a9e2dbf021e" name="9c6b6d824a0c4c4295f28705926efe81" class="tab" checked><label for="9c6b6d824a0c4c4295f28705926efe81-88ff8ec92d82454489832a9e2dbf021e" >General</label>
+<input type="radio" id="9c6b6d824a0c4c4295f28705926efe81-ed287d4b7fc041edbca889714daf221e" name="9c6b6d824a0c4c4295f28705926efe81" class="tab" ><label for="9c6b6d824a0c4c4295f28705926efe81-ed287d4b7fc041edbca889714daf221e" >Startup</label>
+<input type="radio" id="9c6b6d824a0c4c4295f28705926efe81-589ba9b2f6e04eb2a634a15e63d13cad" name="9c6b6d824a0c4c4295f28705926efe81" class="tab" ><label for="9c6b6d824a0c4c4295f28705926efe81-589ba9b2f6e04eb2a634a15e63d13cad" >Android</label>
+<input type="radio" id="9c6b6d824a0c4c4295f28705926efe81-25d997155e024d2f88c4d4b06f6410e0" name="9c6b6d824a0c4c4295f28705926efe81" class="tab" ><label for="9c6b6d824a0c4c4295f28705926efe81-25d997155e024d2f88c4d4b06f6410e0" >iOS</label>
 <div class="tab__content">
 
 <p>|Area|Info|
