--- a/notifications/getting-started.html
+++ b/notifications/getting-started.html
@@ -148,6 +148,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -234,50 +278,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -355,7 +355,7 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -364,11 +364,11 @@
 of letting your users know that you've done something in the background.  Maybe your job ran and determined that you need to do something OR you connected
 to a BLE peripheral... who knows, but you'll definitely need local notifications at some point well using Shiny</p>
 <div class="tab-wrap">
-<input type="radio" id="ddf554efe5fa4ef8888195ab497adf49-8fcb6c54b3b24d2ca2bad3241f8e6d9b" name="ddf554efe5fa4ef8888195ab497adf49" class="tab" checked=""><label for="ddf554efe5fa4ef8888195ab497adf49-8fcb6c54b3b24d2ca2bad3241f8e6d9b">General</label>
-<input type="radio" id="ddf554efe5fa4ef8888195ab497adf49-b9e4e5ce211a48608b34f555540cce25" name="ddf554efe5fa4ef8888195ab497adf49" class="tab"><label for="ddf554efe5fa4ef8888195ab497adf49-b9e4e5ce211a48608b34f555540cce25">Startup</label>
-<input type="radio" id="ddf554efe5fa4ef8888195ab497adf49-0a9db37010ca42c796200ccc6fcb3a23" name="ddf554efe5fa4ef8888195ab497adf49" class="tab"><label for="ddf554efe5fa4ef8888195ab497adf49-0a9db37010ca42c796200ccc6fcb3a23">Android</label>
-<input type="radio" id="ddf554efe5fa4ef8888195ab497adf49-646688713315405a8c6a2d9f83a5bc46" name="ddf554efe5fa4ef8888195ab497adf49" class="tab"><label for="ddf554efe5fa4ef8888195ab497adf49-646688713315405a8c6a2d9f83a5bc46">iOS</label>
-<input type="radio" id="ddf554efe5fa4ef8888195ab497adf49-9cff886c46754dcbb330aff970bdf160" name="ddf554efe5fa4ef8888195ab497adf49" class="tab"><label for="ddf554efe5fa4ef8888195ab497adf49-9cff886c46754dcbb330aff970bdf160">Windows</label>
+<input type="radio" id="c0ffafcb7dfc4976b857c9f5ef9345e3-cc80934123024d27a2145e785266ea32" name="c0ffafcb7dfc4976b857c9f5ef9345e3" class="tab" checked=""><label for="c0ffafcb7dfc4976b857c9f5ef9345e3-cc80934123024d27a2145e785266ea32">General</label>
+<input type="radio" id="c0ffafcb7dfc4976b857c9f5ef9345e3-95d5bf95dbdf4c7ba861c0b4bbf24dba" name="c0ffafcb7dfc4976b857c9f5ef9345e3" class="tab"><label for="c0ffafcb7dfc4976b857c9f5ef9345e3-95d5bf95dbdf4c7ba861c0b4bbf24dba">Startup</label>
+<input type="radio" id="c0ffafcb7dfc4976b857c9f5ef9345e3-205990f4158f4d6baaf32e9fd5a00d06" name="c0ffafcb7dfc4976b857c9f5ef9345e3" class="tab"><label for="c0ffafcb7dfc4976b857c9f5ef9345e3-205990f4158f4d6baaf32e9fd5a00d06">Android</label>
+<input type="radio" id="c0ffafcb7dfc4976b857c9f5ef9345e3-7ad2acc164a945cc875ef8e943249abc" name="c0ffafcb7dfc4976b857c9f5ef9345e3" class="tab"><label for="c0ffafcb7dfc4976b857c9f5ef9345e3-7ad2acc164a945cc875ef8e943249abc">iOS</label>
+<input type="radio" id="c0ffafcb7dfc4976b857c9f5ef9345e3-ac48f78559fa457cba299ba64184c78d" name="c0ffafcb7dfc4976b857c9f5ef9345e3" class="tab"><label for="c0ffafcb7dfc4976b857c9f5ef9345e3-ac48f78559fa457cba299ba64184c78d">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
