--- a/sensors/gyroscope.html
+++ b/sensors/gyroscope.html
@@ -150,6 +150,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -236,50 +280,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
@@ -357,17 +357,17 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="9a3f339c5ae54ad8aa9fe0056dad30f3-f56bb6224bf44e36a5f15e811b212ad5" name="9a3f339c5ae54ad8aa9fe0056dad30f3" class="tab" checked><label for="9a3f339c5ae54ad8aa9fe0056dad30f3-f56bb6224bf44e36a5f15e811b212ad5" >General</label>
-<input type="radio" id="9a3f339c5ae54ad8aa9fe0056dad30f3-c553e10e583640d5ab3eaec0c7d2d6dc" name="9a3f339c5ae54ad8aa9fe0056dad30f3" class="tab" ><label for="9a3f339c5ae54ad8aa9fe0056dad30f3-c553e10e583640d5ab3eaec0c7d2d6dc" >Startup</label>
-<input type="radio" id="9a3f339c5ae54ad8aa9fe0056dad30f3-642f6bf59855446a8a0ed6cd77884545" name="9a3f339c5ae54ad8aa9fe0056dad30f3" class="tab" ><label for="9a3f339c5ae54ad8aa9fe0056dad30f3-642f6bf59855446a8a0ed6cd77884545" >Android</label>
-<input type="radio" id="9a3f339c5ae54ad8aa9fe0056dad30f3-af1a7e0ee964492a979b6cc659a053e5" name="9a3f339c5ae54ad8aa9fe0056dad30f3" class="tab" ><label for="9a3f339c5ae54ad8aa9fe0056dad30f3-af1a7e0ee964492a979b6cc659a053e5" >iOS</label>
-<input type="radio" id="9a3f339c5ae54ad8aa9fe0056dad30f3-8098249f8c9b418fb147baa176b06fd9" name="9a3f339c5ae54ad8aa9fe0056dad30f3" class="tab" ><label for="9a3f339c5ae54ad8aa9fe0056dad30f3-8098249f8c9b418fb147baa176b06fd9" >Windows</label>
+<input type="radio" id="ece924fed57943aaaac9146663ad420e-afeacf2d74b8498fb72a395bc7c273b8" name="ece924fed57943aaaac9146663ad420e" class="tab" checked><label for="ece924fed57943aaaac9146663ad420e-afeacf2d74b8498fb72a395bc7c273b8" >General</label>
+<input type="radio" id="ece924fed57943aaaac9146663ad420e-13e88bd2347c4efabb160c565c103d1d" name="ece924fed57943aaaac9146663ad420e" class="tab" ><label for="ece924fed57943aaaac9146663ad420e-13e88bd2347c4efabb160c565c103d1d" >Startup</label>
+<input type="radio" id="ece924fed57943aaaac9146663ad420e-6a94bdc5116d40cc93fbb0c2dfbe362f" name="ece924fed57943aaaac9146663ad420e" class="tab" ><label for="ece924fed57943aaaac9146663ad420e-6a94bdc5116d40cc93fbb0c2dfbe362f" >Android</label>
+<input type="radio" id="ece924fed57943aaaac9146663ad420e-525b98ec39314c16aa589d9176e72311" name="ece924fed57943aaaac9146663ad420e" class="tab" ><label for="ece924fed57943aaaac9146663ad420e-525b98ec39314c16aa589d9176e72311" >iOS</label>
+<input type="radio" id="ece924fed57943aaaac9146663ad420e-907d057bef0a417f9207a654f3f112e6" name="ece924fed57943aaaac9146663ad420e" class="tab" ><label for="ece924fed57943aaaac9146663ad420e-907d057bef0a417f9207a654f3f112e6" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
