--- a/sensors/magnetometer.html
+++ b/sensors/magnetometer.html
@@ -150,6 +150,50 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/locations">Locations</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/geofences">Geofencing</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/gps">GPS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/locations/motionactivity">Motion Activity</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -236,50 +280,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/locations">Locations</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/geofences">Geofencing</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/gps">GPS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/locations/motionactivity">Motion Activity</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/platform">Platform</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
@@ -357,17 +357,17 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="aa1e8c1becee43318aa87551a09c99c6-26efaa7f3eb6462c89f2757bae0eaeb7" name="aa1e8c1becee43318aa87551a09c99c6" class="tab" checked><label for="aa1e8c1becee43318aa87551a09c99c6-26efaa7f3eb6462c89f2757bae0eaeb7" >General</label>
-<input type="radio" id="aa1e8c1becee43318aa87551a09c99c6-7c44ebca37e546ff9a255a5c159f8342" name="aa1e8c1becee43318aa87551a09c99c6" class="tab" ><label for="aa1e8c1becee43318aa87551a09c99c6-7c44ebca37e546ff9a255a5c159f8342" >Startup</label>
-<input type="radio" id="aa1e8c1becee43318aa87551a09c99c6-087cfe141f7d44839f5038e9aaf2aa47" name="aa1e8c1becee43318aa87551a09c99c6" class="tab" ><label for="aa1e8c1becee43318aa87551a09c99c6-087cfe141f7d44839f5038e9aaf2aa47" >Android</label>
-<input type="radio" id="aa1e8c1becee43318aa87551a09c99c6-67f1d91e1f9d452d8c22a9df83430bed" name="aa1e8c1becee43318aa87551a09c99c6" class="tab" ><label for="aa1e8c1becee43318aa87551a09c99c6-67f1d91e1f9d452d8c22a9df83430bed" >iOS</label>
-<input type="radio" id="aa1e8c1becee43318aa87551a09c99c6-e2f9372255324fd086a6d58832395e01" name="aa1e8c1becee43318aa87551a09c99c6" class="tab" ><label for="aa1e8c1becee43318aa87551a09c99c6-e2f9372255324fd086a6d58832395e01" >Windows</label>
+<input type="radio" id="9eabc4db254d47eeb95241326b6be4f9-3e501b7ee3b84f50861d64e4bd3f3171" name="9eabc4db254d47eeb95241326b6be4f9" class="tab" checked><label for="9eabc4db254d47eeb95241326b6be4f9-3e501b7ee3b84f50861d64e4bd3f3171" >General</label>
+<input type="radio" id="9eabc4db254d47eeb95241326b6be4f9-7b666d0df98d483aa9be983556e401d6" name="9eabc4db254d47eeb95241326b6be4f9" class="tab" ><label for="9eabc4db254d47eeb95241326b6be4f9-7b666d0df98d483aa9be983556e401d6" >Startup</label>
+<input type="radio" id="9eabc4db254d47eeb95241326b6be4f9-db264ccbd1134f39bbc92800c8e991b9" name="9eabc4db254d47eeb95241326b6be4f9" class="tab" ><label for="9eabc4db254d47eeb95241326b6be4f9-db264ccbd1134f39bbc92800c8e991b9" >Android</label>
+<input type="radio" id="9eabc4db254d47eeb95241326b6be4f9-15e58fcf755641b6aed1011f7f9cb27e" name="9eabc4db254d47eeb95241326b6be4f9" class="tab" ><label for="9eabc4db254d47eeb95241326b6be4f9-15e58fcf755641b6aed1011f7f9cb27e" >iOS</label>
+<input type="radio" id="9eabc4db254d47eeb95241326b6be4f9-e1a1e6b8becb4b298a933a4d7e827806" name="9eabc4db254d47eeb95241326b6be4f9" class="tab" ><label for="9eabc4db254d47eeb95241326b6be4f9-e1a1e6b8becb4b298a933a4d7e827806" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
